# mcp_agent_mail_rust

./: .gitignore  .test_out.txt  .ubs-output.txt  .ubs-verbose.txt  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO_ATC_ALIEN_UPGRADES.md  codex.mcp.json  cursor.mcp.json  gemini.mcp.json  install-local.sh  install.ps1  install.sh  rust-toolchain.toml  test_output.txt
.cargo/: config.toml
.github/workflows/: ci.yml  dist.yml  notify-acfs.yml
.ntm/: rate_limits.json
.ntm/pids/: am-mcp_agent_mail_rust.pid  cm-mcp_agent_mail_rust.pid
.ntm/summaries/: mcp_agent_mail_rust-20260402-191333.json  mcp_agent_mail_rust-20260402-191524.json  mcp_agent_mail_rust-20260402-192527.json
crates/mcp-agent-mail/: Cargo.toml
crates/mcp-agent-mail-cli/: Cargo.toml
crates/mcp-agent-mail-cli/src/: bench.rs  ci.rs  context.rs  e2e_runner.rs  golden.rs  legacy.rs  lib.rs  output.rs  robot.rs
crates/mcp-agent-mail-cli/tests/: integration_runs.rs  semantic_conformance.rs
crates/mcp-agent-mail-core/: Cargo.toml
crates/mcp-agent-mail-core/src/: atc_adaptation.rs  atc_admissibility.rs  atc_assumptions.rs  atc_attribution.rs  atc_baseline.rs  atc_composition.rs  atc_contamination.rs  atc_effect_semantics.rs  atc_fairness.rs  atc_labeling.rs  atc_open_index.rs  atc_policy_certificates.rs  atc_regime.rs  atc_retention.rs  atc_risk_budgets.rs  atc_shrinkage.rs  atc_transparency.rs  atc_user_surfaces.rs  atc_voi_control.rs  backpressure.rs  bocpd.rs  config.rs  config_bug_test.rs  conformal.rs  diagnostics.rs  disk.rs  ephemeral.rs  experience.rs  identity.rs  intern.rs  kpi.rs  legacy.rs  lib.rs  mailbox_durability.rs  mcp_config.rs  metrics.rs  models.rs  pane_identity.rs  pattern_overlap.rs  search_types.rs  (+4 more)
crates/mcp-agent-mail-db/: Cargo.toml
crates/mcp-agent-mail-db/src/: archive_anomaly.rs  cache.rs  coalesce.rs  error.rs  forensics.rs  integrity.rs  lib.rs  mail_explorer.rs  mailbox_verdict.rs  migrate.rs  migrate_bug_test.rs  models.rs  pool.rs  queries.rs  reconstruct.rs  retry.rs  s3fifo.rs  s3fifo_bug_test.rs  s3fifo_leak_test.rs  schema.rs  search_auto_init.rs  search_cache.rs  search_candidates.rs  search_canonical.rs  search_consistency.rs  search_diversity.rs  search_embedding_jobs.rs  search_engine.rs  search_filter_compiler.rs  search_fusion.rs  search_index_layout.rs  search_model2vec.rs  search_planner.rs  search_response.rs  search_rollout.rs  search_scope.rs  search_service.rs  search_tantivy.rs  search_two_tier.rs  search_v3.rs  (+3 more)
crates/mcp-agent-mail-db/tests/: atc_experience_lifecycle.rs  diag_hang.rs  diversity_dedup.rs  filter_pagination.rs  forensic_bundle_replay.rs  golden_ranking.rs  identity_fts_cleanup.rs  load_bench.rs  load_concurrency.rs  logging_redaction.rs  mail_explorer.rs  migration_tests.rs  parser_filter_fusion_rerank.rs  pool_exhaustion.rs  query_integration.rs  relevance_harness.rs  s3fifo_bug.rs  schema_migration.rs  scope_policy_property.rs  search_benchmark.rs  search_conformance_fuzz.rs  search_planner_unit.rs  search_quality.rs  search_v3_conformance.rs  stress.rs  sustained_load.rs  timeout_backpressure.rs
crates/mcp-agent-mail-db/tests/common/: mod.rs
crates/mcp-agent-mail-db/tests/fixtures/: cache_golden.json.bak
crates/mcp-agent-mail-server/: Cargo.toml  storage.sqlite3.archive-reconcile-20260327_225813_619
crates/mcp-agent-mail-server/benches/: frame_bench.rs
crates/mcp-agent-mail-server/src/: ack_ttl.rs  ammonia_bug_test.rs  atc.rs  atc_replay.rs  cleanup.rs  console.rs  integrity_guard.rs  lib.rs  mail_ui.rs  markdown.rs  retention.rs  startup_checks.rs  static_export.rs  static_files.rs  test_panic.rs  tool_metrics.rs  tui_app.rs  tui_bridge.rs  tui_chrome.rs  tui_compose.rs  tui_decision.rs  tui_events.rs  tui_focus.rs  tui_keymap.rs  tui_layout.rs  tui_markdown.rs  tui_persist.rs  tui_poller.rs  tui_preset.rs  tui_theme.rs  tui_web_dashboard.rs  tui_widgets.rs  tui_ws_state.rs
crates/mcp-agent-mail-server/src/tui_screens/: agents.rs  analytics.rs  archive_browser.rs  atc.rs  attachments.rs  contacts.rs  dashboard.rs  explorer.rs  inspector.rs  messages.rs  mod.rs  projects.rs  reservations.rs  search.rs  system_health.rs  threads.rs  timeline.rs  tool_metrics.rs
crates/mcp-agent-mail-server/templates/: archive_browser.html  base.html  mail_attachments.html  mail_inbox.html  mail_message.html  mail_project.html  mail_search.html  mail_unified_inbox.html
crates/mcp-agent-mail-server/tests/: startup_compat.rs  truthfulness_integration.rs  ui_markdown_templates.rs
crates/mcp-agent-mail-share/: Cargo.toml
crates/mcp-agent-mail-share/src/: bundle.rs  crypto.rs  deploy.rs  detection.rs  executor.rs  finalize.rs  hosting.rs  lib.rs  planner.rs  probe.rs  prompt.rs  scope.rs  scrub.rs  snapshot.rs  static_render.rs
crates/mcp-agent-mail-storage/: Cargo.toml
crates/mcp-agent-mail-storage/src/: lib.rs
crates/mcp-agent-mail-storage/tests/: stress_pipeline.rs
crates/mcp-agent-mail-tools/: Cargo.toml
crates/mcp-agent-mail-tools/src/: build_slots.rs  contacts.rs  identity.rs  lib.rs  llm.rs  macros.rs  messaging.rs  products.rs  reservation_index.rs  reservations.rs  resources.rs  search.rs
crates/mcp-agent-mail-tools/tests/: system_error_parity.rs  validation_error_parity.rs
crates/mcp-agent-mail/benches/: benchmarks.rs
crates/mcp-agent-mail/src/: main.rs
docs/: CYCLE_SEMANTICS.md  RELEASE_CHECKLIST.md  ROLLOUT_PLAYBOOK.md  SPEC-bug-intake-policy.md  SPEC-doctor-forensic-bundle-schema.md  SPEC-ephemeral-root-policy.md  SPEC-mailbox-durability-states.md  VERIFICATION_COVERAGE_LEDGER.md
scripts/: am  e2e_ci.sh  e2e_cli.sh  e2e_depth_counter.sh  e2e_dual_mode.sh  e2e_histogram_snapshot.sh  e2e_lib.sh  e2e_mode_matrix.sh  e2e_spill_determinism.sh  e2e_test.sh  e2e_tui_a11y.sh  e2e_tui_full_traversal.sh  e2e_tui_startup.sh
tests/e2e/: Dockerfile.migration  test_alias_detection.sh  test_archive.sh  test_artifacts_schema.sh  test_atc.sh  test_bench.sh  test_check_inbox.sh  test_ci.sh  test_cli.sh  test_console.sh  test_dual_mode.sh  test_helpers.sh  test_http.sh  test_idempotency.sh  test_install_ps1.sh  (+22 more)
(+29 files in other folders)
