[package]
name = "mcp-agent-mail-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for MCP Agent Mail (am binary)"

[[bin]]
name = "am"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
ftui.workspace = true
ftui-runtime = { workspace = true, features = ["stdio-capture"] }
thiserror.workspace = true
chrono.workspace = true
sqlmodel-core.workspace = true
sqlmodel-sqlite.workspace = true
mcp-agent-mail-core = { workspace = true, features = ["agent-detect"] }
mcp-agent-mail-db = { workspace = true }
mcp-agent-mail-share = { workspace = true }
mcp-agent-mail-guard = { workspace = true }
mcp-agent-mail-server = { workspace = true }
mcp-agent-mail-tools = { workspace = true }
mcp-agent-mail-storage = { workspace = true }
beads_rust.workspace = true
sha2.workspace = true
hex.workspace = true
asupersync.workspace = true
tempfile.workspace = true
zip.workspace = true
toon.workspace = true
crossterm = "0.28.1"
glob.workspace = true
regex.workspace = true
walkdir.workspace = true
tracing-subscriber.workspace = true
nix = { workspace = true, features = ["signal", "process"] }

[dev-dependencies]
similar.workspace = true
