[package]
name = "mcp-agent-mail-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for MCP Agent Mail (am binary)"

[[bin]]
name = "am"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
fastmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
ftui.workspace = true
ftui-runtime = { workspace = true, features = ["stdio-capture"] }
thiserror.workspace = true
chrono.workspace = true
sqlmodel-core.workspace = true
mcp-agent-mail-core = { workspace = true, features = ["agent-detect"] }
mcp-agent-mail-db = { workspace = true, default-features = false }
mcp-agent-mail-share = { workspace = true, default-features = false }
mcp-agent-mail-guard = { workspace = true }
mcp-agent-mail-server = { workspace = true, default-features = false }
mcp-agent-mail-tools = { workspace = true, default-features = false }
mcp-agent-mail-storage = { workspace = true, default-features = false }
beads_rust.workspace = true
sha2.workspace = true
hex.workspace = true
asupersync.workspace = true
tempfile.workspace = true
zip.workspace = true
toon.workspace = true
crossterm = "0.28.1"
glob.workspace = true
regex.workspace = true
walkdir.workspace = true
unicode-width = "0.1.14"
tracing.workspace = true
tracing-subscriber.workspace = true
nix = { workspace = true, features = ["signal", "process"] }
fs2.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.8.0"

[features]
default = [
    "mcp-agent-mail-db/default",
    "mcp-agent-mail-server/default",
    "mcp-agent-mail-tools/default",
    "mcp-agent-mail-storage/default",
    "mcp-agent-mail-share/default",
]
portable = [
    "mcp-agent-mail-db/portable",
    "mcp-agent-mail-server/portable",
    "mcp-agent-mail-tools/portable",
    "mcp-agent-mail-storage/portable",
    "mcp-agent-mail-share/portable",
]

[dev-dependencies]
similar.workspace = true
