[package]
name = "mcp-agent-mail-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types, models, and configuration for MCP Agent Mail"

[dependencies]
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex.workspace = true
dirs = "6"
getrandom = "0.2"
shellexpand = "3"
sha1.workspace = true
fs2.workspace = true
globset.workspace = true
sqlmodel-frankensqlite.workspace = true

[features]
# Optional local filesystem probes for installed coding-agent CLIs.
agent-detect = ["franken-agent-detection"]
# Enable loom model-checking tests (run with `cargo test --features loom-tests`)
loom-tests = []

[dependencies.franken-agent-detection]
workspace = true
optional = true

[dev-dependencies]
criterion.workspace = true
loom.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "toon_bench"
harness = false

[lints]
workspace = true
