[package]
name = "mcp-agent-mail-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server (stdio + HTTP) for MCP Agent Mail"

[dependencies]
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
minijinja.workspace = true
comrak.workspace = true
ammonia.workspace = true
include_dir.workspace = true
ftui.workspace = true
ftui-extras.workspace = true
ftui-render.workspace = true
ftui-runtime = { workspace = true, features = ["stdio-capture"] }
ftui-tty.workspace = true
ftui-widgets.workspace = true
fastmcp.workspace = true
fastmcp-core.workspace = true
fastmcp-protocol.workspace = true
fastmcp-server.workspace = true
fastmcp-transport.workspace = true
chrono.workspace = true
glob.workspace = true
walkdir.workspace = true
sha2.workspace = true
mcp-agent-mail-core = { path = "../mcp-agent-mail-core" }
mcp-agent-mail-db = { path = "../mcp-agent-mail-db" }
mcp-agent-mail-share = { path = "../mcp-agent-mail-share" }
mcp-agent-mail-storage = { path = "../mcp-agent-mail-storage" }
mcp-agent-mail-tools = { path = "../mcp-agent-mail-tools" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
ftui-harness.workspace = true

[[bench]]
name = "widget_bench"
harness = false

[[bench]]
name = "frame_bench"
harness = false

[lints]
workspace = true
