[package]
name = "mcp-agent-mail-share"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Share/export pipeline for MCP Agent Mail archives"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
zip.workspace = true
include_dir.workspace = true
atty.workspace = true
mcp-agent-mail-db = { workspace = true, default-features = false }
sqlmodel-core.workspace = true
tempfile.workspace = true

[features]
default = ["mcp-agent-mail-db/default"]
portable = ["mcp-agent-mail-db/portable"]

[dev-dependencies]
