[package]
name = "mcp-agent-mail-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git archive storage backend for MCP Agent Mail"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
asupersync.workspace = true
git2.workspace = true
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
fs2.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
base64 = "0.22"
thiserror.workspace = true
tracing.workspace = true
mcp-agent-mail-core = { path = "../mcp-agent-mail-core" }
mcp-agent-mail-db = { path = "../mcp-agent-mail-db", default-features = false }
fastmcp-core.workspace = true
mime_guess = "2.0"

[features]
default = ["mcp-agent-mail-db/default"]
portable = ["mcp-agent-mail-db/portable"]

[dev-dependencies]
tempfile = "3"
