[package]
name = "mcp-agent-mail-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP tools implementation for MCP Agent Mail"

[dependencies]
mcp-agent-mail-core = { workspace = true }
mcp-agent-mail-db = { workspace = true }
mcp-agent-mail-storage = { workspace = true }
mcp-agent-mail-guard = { workspace = true }
fastmcp = { workspace = true }
fastmcp-protocol = { workspace = true }
fastmcp-core = { workspace = true }
fastmcp-server = { workspace = true }
asupersync = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
globset = { workspace = true }
smallvec = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
